Fri Apr 27 16:41:11 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, daemon/gdm.h, daemon/slave.c, config/Gnome.in: 
	  Start on gsm session support.  Still doesn't work.  Also make gdm
	  session strings translatable.  At least some of the standard ones,
	  not perfect but oh well, who cares.

Tue Apr 24 18:45:55 2001  George Lebl <jirka@5z.com>

	* config/PostSession, config/PreSession, gui/gdmlogin.c:  Apply
	  small bits of the ximian patches.  Pre/PostSession scripts only
	  run sessreg if it exists.  and gdmlogin selects the Gnome session
	  if no "default" exists.

Tue Apr 24 15:04:56 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: set the menu separators to insensitive to make
	  keyboard navigation nicer

Mon Apr 23 22:34:24 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: always draw the focus correctly and hardset the
	  gtk focus flag.  Hmm, I'm beginning not to like all this focus
	  voodoo that gdmlogin does.

Mon Apr 23 22:04:24 2001  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h, daemon/auth.c, daemon/misc.[ch],
	  daemon/slave.c, daemon/verify.h,
	  daemon/verify-(pam|crypt|shadow).h:  Fixup enviroment issues.
	  Clear the environment before running a session and before launching
	  the greeter (taking care to save the localisation vars).  Also
	  don't set user env on the slave and leave it, if we set it it's
	  only temporary.  Also fix one possible crash by strduping the
	  pam env since that will go away and putenv doesn't strdup.

Mon Apr 23 20:16:07 2001  George Lebl <jirka@5z.com>

	* configure.in: when we find libwrap.a instead of specifying that
	  filename, use -lwrap which may be better on some systems

Mon Apr 23 20:08:19 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  if no LANG/LC_ALL is set, use the GdmDefaultLocale
	  setting as our locale.

Mon Apr 23 18:49:55 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  fix buffer overrun in making the enriched string
