@@ -1,4 +1,5 @@
 [daemon]
+Configurator=@EXPANDED_BINDIR@/gdmconfig
 AutomaticLogin=
 Chooser=@EXPANDED_BINDIR@/gdmchooser --disable-sound --disable-crash-dialog
 DefaultPath=/bin:/usr/bin:/usr/bin/X11:/usr/local/bin:@EXPANDED_BINDIR@
@@ -43,6 +44,7 @@ MaxIconWidth=128
 MaxIconHeight=128
 
 [greeter]
+ConfigAvailable=false
 Browser=false
 DefaultFace=@EXPANDED_PIXMAPDIR@/nobody.png
 DefaultLocale=english
