@@ -1,3 +1,10 @@
+Sat Apr 28 17:50:00 2001  Lee Mallabone <lee0@callnetuk.com>
+
+        * gui/gdmlogin.c, daemon/gdm.h, config/gdm.conf.in: Add the option
+	  (and relevant paths in the config) to run gdmconfig from the system
+	  menu in gdmlogin. Disabled by default for obvious reasons. This
+	  closes bug #53783.
+
 Fri Apr 27 16:41:11 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c, daemon/gdm.h, daemon/slave.c, config/Gnome.in: 
